--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,21 @@
 	<groupId>com.javacodegeeks.snippets.enterprise</groupId>
 	<artifactId>hibernateexample</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
-	<dependencies>
+    <dependencies>
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
